changes to base files

--- a/arch_base/Dockerfile
+++ b/arch_base/Dockerfile
@@ -2,5 +2,9 @@ FROM archlinux:latest
 
 RUN pacman -Syu --noconfirm
 
-CMD [ "/bin/sh" ]
+RUN pacman -S --noconfirm neovim git sudo
+
+RUN useradd -s /bin/bash -U -m developer
+
+CMD [ "/bin/bash" ]
 
